--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="ingrese_nombre_del_proyecto">Ingrese nombre del proyecto</string>
     <string name="lenguaje">Lenguaje:</string>
     <string name="cerrar_sesi_n">Cerrar sesión</string>
+    <string name="borrar">Borrar</string>
 </resources>
